--- a/chat.html
+++ b/chat.html
@@ -15,95 +15,56 @@
   --color-primary: #4CAF50;
   --color-primary-hover: #45a049;
 }
-
-/* RESET */
-* { box-sizing: border-box; margin:0; padding:0; }
-html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
-
-/* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
-header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
-.emoji-head { width:32px; height:32px; }
-
-/* TOPBAR */
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
-#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
-#topBar span { font-size:0.9em; flex-shrink:0; }
-
-/* MOBILE USERS HORIZONTAL */
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+* { box-sizing:border-box; margin:0; padding:0;}
+html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light);}
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; display:flex; align-items:center; gap:8px; z-index:100;}
+header h1 { color: var(--color-primary); font-size:1.4em; display:flex; align-items:center; gap:8px;}
+.emoji-head { width:32px;height:32px;}
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100;}
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0;}
+#topBar span { font-size:0.9em; flex-shrink:0;}
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd;}
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
-/* BOLINHA DE NOTIFICAÇÃO PISCANTE */
-.notify-dot {
-  position:absolute;
-  top:2px;
-  right:2px;
-  width:10px;
-  height:10px;
-  background:red;
-  border-radius:50%;
-  animation: blink 1s infinite;
-  display:none;
-}
-@keyframes blink {
-  0% { opacity:1; }
-  50% { opacity:0; }
-  100% { opacity:1; }
-}
+.notify-dot { position:absolute; top:2px; right:2px; width:10px; height:10px; background:red; border-radius:50%; animation: blink 1s infinite; display:none; }
+@keyframes blink { 0%{opacity:1;} 50%{opacity:0;} 100%{opacity:1;} }
 
-/* MAIN */
-#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
-
-/* USER LIST (DESKTOP) */
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px);}
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
-.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
+.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative;}
+.userItem img { width:28px;height:28px;border-radius:50%; }
 .userItem:hover { background:#e0f7e9; }
-.userItem img { width:28px; height:28px; border-radius:50%; }
 
-/* CHAT */
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
-/* CHAT INPUT */
 #chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
 #chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
 #chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
 #chatInput button:hover { background:var(--color-primary-hover); }
 
-/* ADS */
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
-
-/* FOOTER */
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
-/* MOBILE */
 @media(max-width:768px){
-  html, body { height:100%; overflow:visible; }
-  header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
-  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
-  #mobileUserLine {
-    display:flex; position:fixed; top:90px; left:0; right:0;
-    padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd;
-    z-index:100; overflow-x:auto; white-space:nowrap;
-  }
-  #mainContent {
-    flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; overflow-y:auto;
-  }
-  #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
-  footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
-  #userList, #adSidebar { display:none; }
+  header{position:fixed;top:0;left:0;right:0;z-index:100;height:50px;}
+  #topBar{position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px;}
+  #mobileUserLine{display:flex; position:fixed; top:90px; left:0; right:0; z-index:100; overflow-x:auto;}
+  #mainContent{flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; overflow-y:auto;}
+  #chatInput{position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%;}
+  footer{position:fixed; bottom:0; left:0; right:0; width:100%; height:40px;}
+  #userList,#adSidebar{display:none;}
 }
 </style>
 </head>
 <body>
 <header>
-  <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
+<h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
 </header>
 
 <div id="topBar">
@@ -130,7 +91,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 </div>
 
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
-
 <audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
 
 <script>
@@ -153,20 +113,19 @@ const msgInput=document.getElementById("msgInput");
 const sendBtn=document.getElementById("sendBtn");
 const chatWindow=document.getElementById("chatWindow");
 const userList=document.getElementById("userList");
+const mobileUserLine=document.getElementById("mobileUserLine");
 const alertaLogin=document.getElementById("alertaLogin");
 const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
-const mobileUserLine=document.getElementById("mobileUserLine");
 const msgSound=document.getElementById("msgSound");
 
 let currentChat="global";
-let unreadMap={};
-let notifiedRequests={};
+let unreadMap={}; // Guarda chats com mensagens não lidas
 
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
-// LOGIN
+// LOGIN / LOGOUT
 auth.onAuthStateChanged(user=>{
   if(user){
     loginBtn.style.display="none";
@@ -176,7 +135,6 @@ auth.onAuthStateChanged(user=>{
     sendBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
-    listenRequests(user.uid); // escuta solicitações
   } else {
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
@@ -196,109 +154,99 @@ db.ref("online").on("value",snap=>{
     const div=document.createElement("div");
     div.className="userItem";
     div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span><div class='notify-dot'></div>`;
-    div.onclick=()=>sendChatRequest(uid,u.name);
+    div.onclick=()=>clickUser(uid,u.name);
     userList.appendChild(div);
 
     const mob=document.createElement("div");
     mob.className="userItemMobile";
     mob.innerHTML=`<img src="${u.photo}" title="${u.name}"><div class='notify-dot'></div>`;
-    mob.onclick=()=>sendChatRequest(uid,u.name);
+    mob.onclick=()=>clickUser(uid,u.name);
     mobileUserLine.appendChild(mob);
   }
   startMobileScroll();
 });
 
-// ENVIA SOLICITAÇÃO DE CHAT
-function sendChatRequest(uid,name){
-  const user=auth.currentUser;
-  if(!user) return alert("Faça login para conversar.");
-  if(uid===user.uid) return;
-  const chatId=[user.uid,uid].sort().join("_");
-  db.ref("chatRequests/"+uid+"/"+chatId).set({from:user.uid,fromName:user.displayName,waiting:true});
-}
-
-// ESCUTA SOLICITAÇÕES (apenas alerta 1x)
-function listenRequests(uid){
-  db.ref("chatRequests/"+uid).on("value",snap=>{
-    const reqs=snap.val()||{};
-    for(const chatId in reqs){
-      if(!notifiedRequests[chatId]){
-        const data=reqs[chatId];
-        showNotifyDot(data.from,true);
-        alert(`Nova solicitação de conversa de ${data.fromName}!`);
-        notifiedRequests[chatId]=true;
-      }
-    }
-  });
-}
-
-// ABRIR CHAT PRIVADO
-function openPrivateChat(uid,name){
+function clickUser(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
   const chatId=[auth.currentUser.uid,uid].sort().join("_");
   currentChat=chatId;
-  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa com ${name}</div>`;
   generalBtn.style.display="inline-block";
+
+  // Limpa alerta
+  unreadMap[chatId]=false;
   showNotifyDot(uid,false);
 
-  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).once("value").then(s=>{
-    if(s.exists()){
-      // exibe opção aceitar/recusar
-      chatWindow.innerHTML=`
-        <div style='text-align:center;margin-top:20px;'>
-          🔔 ${s.val().fromName} quer conversar com você<br><br>
-          <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
-          <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
-        </div>`;
+  // Verifica status do chat
+  db.ref("privateStatus/"+chatId).once("value").then(s=>{
+    const st=s.val();
+    if(st && st.rejected){
+      chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Esta conversa foi recusada.</div>";
+      return;
+    }
+    if(!st || (!st.accepted && st.waiting)){
+      showAcceptancePrompt(chatId,name);
     } else {
       startChatListener(chatId);
     }
   });
 }
 
-// ACEITAR / RECUSAR
+function showAcceptancePrompt(chatId,name){
+  chatWindow.innerHTML=`
+    <div style='text-align:center;margin-top:20px;'>
+      ${name} enviou uma mensagem. Deseja aceitar?<br><br>
+      <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
+      <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
+    </div>`;
+}
+
 function acceptChat(chatId){
-  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
+  db.ref("privateStatus/"+chatId).set({accepted:true});
   startChatListener(chatId);
 }
 function rejectChat(chatId){
-  db.ref("chatRequests/"+auth.currentUser.uid+"/"+chatId).remove();
+  db.ref("privateStatus/"+chatId).set({rejected:true});
   chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
+}
+
+// ENVIO DE MENSAGEM
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter") sendMessage();});
+function sendMessage(){
+  const text=msgInput.value.trim();
+  const user=auth.currentUser;
+  if(!text||!user)return;
+  const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
+  db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
+
+  // Se privado e destinatário ainda não aceitou, define waiting
+  if(currentChat!=="global"){
+    db.ref("privateStatus/"+currentChat).set({waiting:true}, {merge:true});
+  }
+
+  msgInput.value="";
 }
 
 // MONITORA CHAT PRIVADO
 function startChatListener(chatId){
   db.ref("private/"+chatId).off();
   db.ref("private/"+chatId).on("child_added",s=>{
-    showMessage(s.val(),chatId);
-    if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
-      playNotification();
-      unreadMap[chatId]=true;
-      const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
-      showNotifyDot(uidOther,true);
+    const msg=s.val();
+    showMessage(msg,chatId);
+    if(msg.user!==auth.currentUser.displayName && currentChat!==chatId){
+      if(!unreadMap[chatId]){
+        unreadMap[chatId]=true;
+        const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
+        showNotifyDot(uidOther,true);
+        alert(`💬 Nova mensagem de ${msg.user}`);
+        msgSound.currentTime=0;
+        msgSound.play();
+      }
     }
   });
 }
-
-// ENVIAR MENSAGEM
-sendBtn.onclick=sendMessage;
-msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
-function sendMessage(){
-  const text=msgInput.value.trim();
-  const user=auth.currentUser;
-  if(!text||!user) return;
-  const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
-  msgInput.value="";
-}
-
-// CHAT GLOBAL
-db.ref("chatGlobal").on("child_added",snap=>{
-  const msg=snap.val();
-  showMessage(msg,"chatGlobal");
-  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") playNotification();
-});
 
 // MOSTRA MENSAGEM
 function showMessage(msg,room){
@@ -310,17 +258,10 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// ALERTA E SOM
-function playNotification(){
-  msgSound.currentTime=0;
-  msgSound.play();
-}
-
-// ATUALIZA BOLINHA VERMELHA
+// BOLINHA VERMELHA
 function showNotifyDot(uid,show){
   const items=[...document.querySelectorAll(".userItem"),...document.querySelectorAll(".userItemMobile")];
   for(const el of items){
-    if(el.innerHTML.includes(uid)) continue;
     const dot=el.querySelector(".notify-dot");
     if(dot) dot.style.display=show?"block":"none";
   }
@@ -334,7 +275,7 @@ generalBtn.onclick=()=>{
   generalBtn.style.display="none";
 };
 
-// SCROLL AUTOMÁTICO MOBILE
+// SCROLL MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
@@ -345,6 +286,12 @@ function startMobileScroll(){
     if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
   },20);
 }
+
+// CHAT GLOBAL
+db.ref("chatGlobal").on("child_added",snap=>{
+  const msg=snap.val();
+  showMessage(msg,"chatGlobal");
+});
 </script>
 </body>
 </html>
