--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,7 @@
 * { box-sizing: border-box; margin:0; padding:0; }
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; justify-content:space-between; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
@@ -27,16 +27,15 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; position:relative; }
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
-.userItemMobile button { position:absolute; bottom:0; right:0; padding:2px 4px; font-size:10px; border-radius:3px; border:1px solid var(--color-primary); background:white; color:var(--color-primary); cursor:pointer; }
 
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
 
-#currentPartner { position:absolute; top:0; right:10px; font-weight:bold; color:var(--color-name); }
+#currentPartner { font-weight:bold; color:var(--color-name); }
 
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
@@ -44,9 +43,9 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
-.userItem button { margin-left:auto; border:1px solid var(--color-primary); background:white; color:var(--color-primary); border-radius:5px; padding:4px 6px; cursor:pointer; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
+#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
@@ -93,7 +92,10 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 <div id="mainContent">
   <div id="userList"></div>
   <div id="chatContainer">
-    <div id="currentPartner"></div>
+    <div id="chatHeader">
+      <div id="currentPartner">🌍 Global</div>
+      <button id="blockBtn" style="display:none;">Bloquear</button>
+    </div>
     <div id="chatWindow"></div>
     <div id="chatInput">
       <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
@@ -131,18 +133,17 @@ const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
 const currentPartnerEl=document.getElementById("currentPartner");
+const blockBtn=document.getElementById("blockBtn");
 
 let currentChat="global";
 let privateChatListener=null;
 let alertIcons={};
-let pendingAlerts={};
-let blockedUsers={};
+let hiddenChats={};
 let userData={};
 let currentPartnerUID=null;
+let blockedUsers={};
 
-// Solicitar permissão notificação
-if("Notification" in window) Notification.requestPermission();
-
+// LOGIN/LOGOUT
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -156,8 +157,7 @@ auth.onAuthStateChanged(user=>{
     userData={uid:user.uid,name:user.displayName,photo:user.photoURL};
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
-    loadBlockedUsers();
-    updateUserList();
+    loadBlockedUsers().then(updateUserList);
   } else {
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
@@ -171,28 +171,34 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
-function loadBlockedUsers(){
+// Carregar bloqueados
+async function loadBlockedUsers(){
   if(!userData.uid) return;
-  db.ref(`blocked/${userData.uid}`).once("value").then(snap=>{
-    blockedUsers = snap.val()||{};
-  });
+  const snap = await db.ref(`blocked/${userData.uid}`).once("value");
+  blockedUsers = snap.val()||{};
 }
 
-function toggleBlock(uid){
-  if(!userData.uid) return;
-  const ref=db.ref(`blocked/${userData.uid}/${uid}`);
-  if(blockedUsers[uid]){
+// BLOQUEAR/DEBLOQUEAR
+function toggleBlock(){
+  if(!currentPartnerUID || !userData.uid) return;
+  const ref=db.ref(`blocked/${userData.uid}/${currentPartnerUID}`);
+  if(blockedUsers[currentPartnerUID]){
     ref.remove();
-    blockedUsers[uid]=false;
+    blockedUsers[currentPartnerUID]=false;
+    blockBtn.textContent="Bloquear";
     alert("Usuário desbloqueado.");
   } else {
     ref.set(true);
-    blockedUsers[uid]=true;
+    blockedUsers[currentPartnerUID]=true;
+    blockBtn.textContent="Desbloquear";
     alert("Usuário bloqueado.");
-    if(currentPartnerUID===uid) startGlobalChat();
+    startGlobalChat();
   }
 }
 
+blockBtn.onclick=toggleBlock;
+
+// FUNÇÃO PARA ATUALIZAR USUÁRIOS
 function updateUserList(){
   db.ref("online").once("value").then(snap=>{
     const users=snap.val()||{};
@@ -228,18 +234,9 @@ function updateUserList(){
 
     for(const [uid,u] of Object.entries(users)){
       if(!u.name || uid===userData.uid) continue;
-
       const div=document.createElement("div");
       div.className="userItem";
       div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
-      const blockBtn=document.createElement("button");
-      blockBtn.textContent=blockedUsers[uid]?"Desbloquear":"Bloquear";
-      blockBtn.onclick=(e)=>{
-        e.stopPropagation();
-        toggleBlock(uid);
-        blockBtn.textContent=blockedUsers[uid]?"Desbloquear":"Bloquear";
-      };
-      div.appendChild(blockBtn);
       div.onclick=()=>startPrivateChat(uid,u.name);
       userList.appendChild(div);
 
@@ -247,18 +244,9 @@ function updateUserList(){
       mob.className="userItemMobile";
       mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
       mob.onclick=()=>startPrivateChat(uid,u.name);
-      const mobBlockBtn=document.createElement("button");
-      mobBlockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
-      mobBlockBtn.onclick=(e)=>{
-        e.stopPropagation();
-        toggleBlock(uid);
-        mobBlockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
-      };
-      mob.appendChild(mobBlockBtn);
       mobileUserLine.appendChild(mob);
 
       alertIcons[uid]={desktop:div,mobile:mob};
-      pendingAlerts[uid]=false;
     }
 
     onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
@@ -266,29 +254,50 @@ function updateUserList(){
   });
 }
 
+// CHAT GLOBAL
 function startGlobalChat(){
   currentChat="global";
   currentPartnerUID=null;
   currentPartnerEl.textContent="🌍 Global";
+  blockBtn.style.display="none";
   chatWindow.innerHTML="";
   generalBtn.style.display="none";
   db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
 }
 
+// INICIAR CHAT PRIVADO
 function startPrivateChat(uid,name){
   if(blockedUsers[uid]) { alert("Este usuário está bloqueado."); return; }
-  clearUserAlert(uid);
   currentPartnerUID=uid;
   currentChat=[userData.uid,uid].sort().join("_");
   currentPartnerEl.textContent=name;
-  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name} <span style="cursor:pointer;color:red;" onclick="hideChat('${currentChat}')">[Apagar chat]</span></div>`;
+  blockBtn.style.display="inline-block";
+  blockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
+
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name} <span style="cursor:pointer;color:red;" onclick="hideChat()">[Apagar chat]</span></div>`;
   generalBtn.style.display="inline-block";
 
   if(privateChatListener) privateChatListener.off();
   privateChatListener=db.ref("private/"+currentChat);
-  privateChatListener.on("child_added",s=>showMessage(s.val(),currentChat,true));
+  privateChatListener.on("child_added",snap=>{
+    const msg=snap.val();
+    showMessage(msg,currentChat);
+    if(msg.uid!==userData.uid){
+      // Notificação persistente
+      const icon=alertIcons[msg.uid]?.desktop;
+      if(icon && !icon.querySelector(".alert-dot")){
+        const dot=document.createElement("div");
+        dot.className="alert-dot";
+        icon.appendChild(dot);
+        alertIcons[msg.uid].mobile.querySelector(".alert-dot")?.remove();
+        const dotMob=dot.cloneNode();
+        alertIcons[msg.uid].mobile.appendChild(dotMob);
+      }
+    }
+  });
 }
 
+// FUNÇÕES DE MENSAGEM
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 
@@ -300,55 +309,36 @@ function sendMessage(){
     return;
   }
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now(),photo:userData.photo});
+  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
   msgInput.value="";
 }
 
-function showMessage(msg,room,privateMsg=false){
+function showMessage(msg,room){
   if(room!=="chatGlobal" && room!==currentChat) return;
-  const hiddenBy=msg.hiddenBy||{};
-  if(hiddenBy[userData.uid]) return;
-
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
+  div.onclick=()=>{ // remover notificação
+    const icon=alertIcons[msg.uid]?.desktop;
+    if(icon) icon.querySelector(".alert-dot")?.remove();
+    const iconMob=alertIcons[msg.uid]?.mobile;
+    if(iconMob) iconMob.querySelector(".alert-dot")?.remove();
+  };
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
-
-  if(msg.uid!==userData.uid){
-    const icon = alertIcons[msg.uid];
-    if(icon && !pendingAlerts[msg.uid]){
-      ['desktop','mobile'].forEach(pos=>{
-        const dot = document.createElement('div');
-        dot.className='alert-dot';
-        icon[pos].appendChild(dot);
-      });
-      pendingAlerts[msg.uid]=true;
-    }
-    if(Notification.permission==="granted"){
-      new Notification("Nova mensagem", {body:`${msg.user}: ${msg.text}`, icon:msg.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'});
-    }
-  }
 }
 
-function clearUserAlert(uid){
-  if(alertIcons[uid]){
-    ['desktop','mobile'].forEach(pos=>{
-      const dot = alertIcons[uid][pos].querySelector('.alert-dot');
-      if(dot) dot.remove();
-    });
-    pendingAlerts[uid]=false;
-  }
-}
-
-function hideChat(chatId){
+// APAGAR CHAT LOCAL
+function hideChat(){
   if(confirm("Apagar este chat localmente?")){
     chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
   }
 }
 
+// VOLTAR AO CHAT GLOBAL
 generalBtn.onclick=startGlobalChat;
 
+// SCROLL HORIZONTAL MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
@@ -359,9 +349,6 @@ function startMobileScroll(){
     if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
   },20);
 }
-
-// Listener global
-db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 </script>
 </body>
 </html>
